build_flush_fix.log
install
+- install zig
   +- compile exe zig ReleaseFast native 1 errors
src/main.zig:4145:32: error: use of undeclared identifier 'arena'
                try comp.flush(arena, main_progress_node);
                               ^~~~~
error: 1 compilation errors
failed command: /private/tmp/zig-aarch64-macos-0.16.0-dev.1364+f0a3df98d/zig build-exe --stack 48234496 -fno-sanitize-thread -OReleaseFast --dep aro --dep build_options -Mroot=/Users/joel/Work/zig/claude/src/main.zig -Maro=/Users/joel/Work/zig/claude/lib/compiler/aro/aro.zig -Mbuild_options=.zig-cache/c/8d2a3e7bea6ab40eeb98d798457ee3b5/options.zig --cache-dir .zig-cache --global-cache-dir /Users/joel/.cache/zig --name zig --zig-lib-dir /private/tmp/zig-aarch64-macos-0.16.0-dev.1364+f0a3df98d/lib/ --listen=-

Build Summary: 295/298 steps succeeded (1 failed)
install transitive failure
+- install zig transitive failure
   +- compile exe zig ReleaseFast native 1 errors

error: the following build command failed with exit code 1:
.zig-cache/o/6c7efc3e85b8df33e9976d4b0fd512a0/build /private/tmp/zig-aarch64-macos-0.16.0-dev.1364+f0a3df98d/zig /private/tmp/zig-aarch64-macos-0.16.0-dev.1364+f0a3df98d/lib /Users/joel/Work/zig/claude .zig-cache /Users/joel/.cache/zig --seed 0x5fcdc991 -Z051e3c390bb3a5de -Doptimize=ReleaseFast
